support storage prepare & accessor
